Signed-off-by: wang120140 <1011048154@qq.com>添加声音及其该变新的需求及其 调整样式

--- a/public/index.html
+++ b/public/index.html
@@ -117,10 +117,10 @@
         }
     </script>
     <!-- 这个是vscoder信息 -->
-    <script type="text/javascript" src="<%= BASE_URL %>js/vconsole.min.js"></script>
+    <!-- <script type="text/javascript" src="<%= BASE_URL %>js/vconsole.min.js"></script>
     <script>
         new VConsole();
-    </script>
+    </script> -->
 
 </body>
 
